// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer.tsx Default case 1`] = `
.c0 {
  border: 1px solid #333;
  border-radius: 12%;
  padding: 0 0.3rem;
  margin: 0 1rem;
  width: 3.6rem;
}

.c0 img {
  width: 100%;
}

<div
  className="c0"
/>
`;

exports[`Footer.tsx With extra space 1`] = `
.c0 {
  border: 1px solid #333;
  border-radius: 12%;
  padding: 0 0.3rem;
  margin: 0 1rem;
  width: 5rem;
}

.c0 img {
  width: 100%;
}

<div
  className="c0"
/>
`;
